--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <title>Graphs and Charts</title>
 </head>
 <body>
-    <div id="test_target" style="width:800px; height: 600px"></div>
+    <div id="test_target" style="width:80vw; height: 80vh"></div>
 </body>
 </html>
