--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="data.js"></script>
-    <script type="application/javascript" src="dist/index.js"></script>
+    <!-- <script type="application/javascript" src="dist/index.js"></script> -->
     <title>Graphs and Charts</title>
 </head>
 <body>
